--- a/amplify.yml
+++ b/amplify.yml
@@ -9,11 +9,13 @@ frontend:
     preBuild:
       commands:
         - npm install
+        - npm update
+        - npm audit fix --force
     build:
       commands:
         - npm run build
   artifacts:
-    baseDirectory: build
+    baseDirectory: dist
     files:
       - '**/*'
   cache:
