--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
-  "dependencies": {
-    "@aws-amplify/ui-react": "^6.5.5",
-    "aws-amplify": "^6.6.6",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
+  "devDependencies": {
+  "@testing-library/jest-dom": "^6.1.4",
+  "@testing-library/react": "^14.0.0",
+  "@types/jest": "^29.5.0",
+  "jest": "^29.5.0",
+  "typescript": "^5.0.0"
+},
   "devDependencies": {
     "@aws-amplify/backend": "^1.5.0",
     "@aws-amplify/backend-cli": "^1.2.9",
